--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -137,9 +137,8 @@ P3 </div>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 7 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 8<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P4 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Review, Lecture
+P4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 9 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
@@ -159,6 +158,8 @@ Last withdraw day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Oct 15<br>
+      <div style="text-align: center;">Lecture
+P4 </div>
       <div style="text-align: center;">Due:
 Lab 1<br>
       </div>
@@ -184,32 +185,48 @@ videos: </span><a
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 21 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 22</td>
+ valign="top">Oct 22<br>
+      <div style="text-align: center;">Lectures P4, P5<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 23 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 24</td>
+ valign="top">Oct 24<br>
+      <div style="text-align: center;">Lecture
+P5 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 25</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 28 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 29</td>
+ valign="top">Oct 29<br>
+      <div style="text-align: center;">Lecture
+P5 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 30 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 31</td>
+ valign="top">Oct 31<br>
+      <div style="text-align: center;">Lectures P5, D1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 1</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 4 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 5</td>
+ valign="top">Nov 5<br>
+      <div style="text-align: center;">Lecture D1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 6 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Nov 7<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 2</span><br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+D1 (from slide 56), D2</span><br>
+      </div>
+      <div style="text-align: center;">Due:
+Lab 2<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -297,3 +314,4 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
+
