--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -222,9 +222,7 @@ P5 </div>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 6 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Nov 7<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-D1 (from slide 56), D2</span><br>
-      </div>
+      <div style="text-align: center;">Lectures D1, D2 </div>
       <div style="text-align: center;">Due:
 Lab 2<br>
       </div>
@@ -239,17 +237,25 @@ Day Observed</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 12</td>
+ valign="top">Nov 12<br>
+      <div style="text-align: center;">Lectures D2, F1, F2 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 13 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 14</td>
+ valign="top">Nov 14<br>
+      <div style="text-align: center;">Lecture F2 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 15</td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 18 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 19</td>
+ valign="top">Nov 19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+M1 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 20 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Nov 21</td>
@@ -264,12 +270,12 @@ Day Observed</span><br>
  valign="top">Nov 27</td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 28
-      <center style="font-style: italic;">Thanksgiving Recess, UA Closed<br>
+      <center>Thanksgiving Recess, UA Closed<br>
       </center>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 29
-      <center style="font-style: italic;">Thanksgiving Recess, UA Closed<br>
+      <center>Thanksgiving Recess, UA Closed<br>
       </center>
       </td>
     </tr>
@@ -280,8 +286,8 @@ Day Observed</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec 4 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Dec 5<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 3</span><br>
+      <div style="text-align: center;">Due:
+Lab 3<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -314,4 +320,3 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
-
