--- a/teaching/cs426/textFiles/projects.htm
+++ b/teaching/cs426/textFiles/projects.htm
@@ -34,6 +34,10 @@ AND PROGRAMS <br>
 &nbsp;&nbsp; Due November 7.<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/lab 3 simple file system.pdf" target="_top">Description</a>,
+	<a href="../labs/lab3/floppya.img">disk image</a>,<br>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/filesys.c">seed
+	file</a>.<br>
 &nbsp;&nbsp; Due December 5.<br>
 </font></b><b><br>
 </b>
