--- a/teaching/cs426/index.html
+++ b/teaching/cs426/index.html
@@ -68,7 +68,7 @@ currently configured not to display inline frames. </iframe></p>
 </div>
 <div id="layer23"
  style="left: 866px; top: 40px; width: 211px; height: 38px; position: absolute; z-index: 18; color: rgb(255, 255, 255); text-align: center;"><font
- style="font-size: 11pt; font-weight: 700;" face="Verdana">INFO SITE<br>FALL 2024<br>
+ style="font-size: 11pt; font-weight: 700;" face="Verdana">INFO SITE<br>SPRING 2025<br>
 </font></div>
 <p><img src="homePageGraphics/test_background_3.png"
  border="0" height="795" width="1120"></p>
