--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -11,11 +11,13 @@
  alink="#66ffff" link="#66ffff" vlink="#ff99ff">
 <center>
 <h1>TENTATIVE SCHEDULE</h1>
-<h1>CPSC:4/526, TR 9:15 - 10:30, KOLBE 51, FALL 2024</h1>
 </center>
-<table nosave="" border="1" width="100%">
+<center>
+<h1>CPSC:4/526, TR 9:15 - 10:30, XXX, SPRING 2025</h1>
+</center>
+<table style="width: 1889px; height: 482px;" border="1">
   <tbody>
-    <tr nosave="" bgcolor="#000000">
+    <tr bgcolor="#000000">
       <td width="20%">
       <center><b><font color="#ffffff"><font size="+0">MONDAY</font></font></b></center>
       </td>
@@ -28,295 +30,259 @@
       <td width="20%">
       <center><b><font color="#ffffff">THURSDAY</font></b></center>
       </td>
-      <td nosave="" width="20%">
+      <td width="20%">
       <center><b><font color="#ffffff">FRIDAY</font></b></center>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Aug 26 </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+13 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Aug 27<br>
-      <div style="text-align: center;">Intro, Lecture O1<br>
-      </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Aug 28 </td>
+ valign="top">Jan 14</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+15 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Aug 29<br>
-      <div style="text-align: center;">Lectures O1, O2 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Aug 30</td>
+ valign="top">Jan 16</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+17 </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Sep 2
-      <center style="font-style: italic;">Labor Day, UA Closed<br>
+ valign="top">Jan 20
+      <center style="font-style: italic;">MLK Day, UA closed<br>
 Sunday: Last add day<br>
       </center>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 3<br>
-      <div style="text-align: center;">Lectures O2, O3 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 4 </td>
+ valign="top">Jan 21</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+22 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 5<br>
-      <div style="text-align: center;"><span style="font-style: italic;"></span>Lectures
-O3, O4 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Sep 6</td>
+ valign="top">Jan 23</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+24 </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 9<br>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+27<br>
       <div style="text-align: center;"><span style="font-style: italic;">Sunday:
 Last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 10<br>
-      <div style="text-align: center;"><span style="font-style: italic;"></span>Lectures
-O4, O5 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 11 </td>
+ valign="top">Jan 28</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+29 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 12<br>
-      <div style="text-align: center;">Lectures O5, P1 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Sep 13</td>
+ valign="top">Jan 30</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
+31 </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 16 </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+3 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 17<br>
-      <div style="text-align: center;">Lecture P1 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 18 </td>
+ valign="top">Feb 4</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+5 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 19<br>
-      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
-P1 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Sep 20</td>
+ valign="top">Feb 6</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+7 </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 23 </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+10 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 24<br>
-      <div style="text-align: center;">Lectures P1, P2<br>
+ valign="top">Feb 11</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+12 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Feb 13</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+14 </td>
+    </tr>
+    <tr>
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
+ valign="top">Feb 17 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Feb 18<br>
+      <div style="text-align: center;"><span style="font-style: italic;">President's
+Day Observed</span><br>
       </div>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 25 </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+19 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Sep 26<br>
-      <div style="text-align: center;">Lecture
-P3 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Sep 27</td>
+ valign="top">Feb 20</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+21 </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Sep 30 </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+24 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 1<br>
-      <div style="text-align: center;">Lecture
-P3 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 2 </td>
+ valign="top">Feb 25</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+26 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 3<br>
-      <div style="text-align: center;">Lecture
-P3 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Oct 4</td>
-    </tr>
-    <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 7 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 8<br>
-      <div style="text-align: center;">Review, Lecture
-P4 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 9 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 10<br>
-      <div style="text-align: center;">Midterm Exam (Unit O; Lectures
-P1, P2, P3)<br>
+ valign="top">Feb 27<br>
+      <div style="text-align: center;">Midterm Exam<br>
       </div>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Oct 11</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
+28 </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 14<br>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+3<br>
       <div style="text-align: center;"><span style="font-style: italic;">Sunday:
 Last withdraw day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 15<br>
-      <div style="text-align: center;">Lecture
-P4 </div>
-      <div style="text-align: center;">Due:
-Lab 1<br>
-      </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 16 </td>
-      <td style="background-color: rgb(255, 204, 153);"
- bgcolor="#c0c0c0" valign="top"><span style="color: rgb(0, 0, 0);">Oct
-17</span><br>
-      <div
- style="text-align: center; background-color: rgb(255, 204, 153);"><span
- style="color: rgb(0, 0, 0);">Online
-videos: </span><a
- href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part1.mov">vid1</a><span
- style="color: rgb(0, 0, 0);">, </span><a
- href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part3.mov">vid2</a><span
- style="color: rgb(0, 0, 0);">, </span><a
- href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part4.mov">vid3</a><br>
-      </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Oct 18</td>
-    </tr>
-    <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 21 </td>
+ valign="top">Mar 4</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+5 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 22<br>
-      <div style="text-align: center;">Lectures P4, P5<br>
-      </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 23 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 24<br>
-      <div style="text-align: center;">Lecture
-P5 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Oct 25</td>
-    </tr>
-    <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 28 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 29<br>
-      <div style="text-align: center;">Lecture
-P5 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Oct 30 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Oct 31<br>
-      <div style="text-align: center;">Lectures P5, D1 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Nov 1</td>
-    </tr>
-    <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 4 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 5<br>
-      <div style="text-align: center;">Lecture D1 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 6 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 7<br>
-      <div style="text-align: center;">Lectures D1, D2 </div>
-      <div style="text-align: center;">Due:
-Lab 2<br>
-      </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Nov 8</td>
-    </tr>
-    <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 11<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Vets
-Day Observed</span><br>
-      </div>
-      </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 12<br>
-      <div style="text-align: center;">Lectures D2, F1, F2 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 13 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 14<br>
-      <div style="text-align: center;">Lecture F2 </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Nov 15</td>
-    </tr>
-    <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 18 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 19<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-M1 (from start)</span><br>
-      </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 20 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 21</td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Nov 22</td>
-    </tr>
-    <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Nov 25 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Nov 26</td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Nov 27</td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Nov 28
-      <center>Thanksgiving Recess, UA Closed<br>
-      </center>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Nov 29
-      <center>Thanksgiving Recess, UA Closed<br>
-      </center>
+ valign="top">Mar 6</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 7<br>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Dec 2 </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+10 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Dec 3</td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Dec 4 </td>
+ valign="top">Mar 11</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+12 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Dec 5<br>
-      <div style="text-align: center;">Due:
-Lab 3<br>
-      </div>
-      </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Dec 6</td>
+ valign="top">Mar 13</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+14 </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Dec 9</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+17 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Dec 10<br>
-      <div style="text-align: center;">Final Exam, 12:15 PM<br>
-(Lectures P4, P5; Units D, F, M)<br>
+ valign="top">Mar 18</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+19 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Mar 20</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+21 </td>
+    </tr>
+    <tr bgcolor="#c0c0c0">
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+24
+      <center style="font-style: italic;">Spring Break</center>
+      </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+25
+      <center style="font-style: italic;">Spring Break</center>
+      </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+26
+      <center style="font-style: italic;">Spring Break</center>
+      </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+27
+      <center
+ style="background-color: rgb(0, 0, 0); font-style: italic;">Spring
+Break</center>
+      </td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+28
+      <center style="font-style: italic;">Spring Break</center>
+      </td>
+    </tr>
+    <tr>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
+31 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 1</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+2 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 3</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+4 </td>
+    </tr>
+    <tr>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+7 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 8</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+9 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 10</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+11 </td>
+    </tr>
+    <tr>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+14 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 15</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+16 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 17</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+18 </td>
+    </tr>
+    <tr>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+21 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 22</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+23 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 24</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+25 </td>
+    </tr>
+    <tr valign="top">
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+28 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">Apr 29</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
+30 </td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+ valign="top">May 1</td>
+      <td style="background-color: rgb(0, 0, 0);" valign="top">May
+2 </td>
+    </tr>
+    <tr valign="top">
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
+5</td>
+      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
+6<br>
+      <div style="text-align: center;">Final Exam, 12:15<br>
       </div>
       </td>
-      <td style="background-color: rgb(0, 0, 0);" valign="top">Dec 11 </td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Dec 12</td>
-      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Dec 13</td>
+      <td style="background-color: rgb(0, 0, 0);">May 7
+      <center><b><br>
+      </b></center>
+      </td>
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
+8</td>
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
+9</td>
     </tr>
   </tbody>
 </table>
 <span style="font-style: italic;">
 <script language="JavaScript">document.write("<br>Tentative plans in italics. Last updated " + document.lastModified + ".");
 today = new Date();
-var dateSecond = new Date(today.getFullYear(), 11, 13);
+var dateSecond = new Date(today.getFullYear(), 4, 9);
 var timeDiff = Math.abs(dateSecond.getTime() - today.getTime());
 var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
-document.write("<br>Only " + diffDays + " days left until end of fall term (12/13/2024).");
+document.write("<br>Only " + diffDays + " days left until end of spring term (5/9/2025).");
 </script></span>
 </body>
 </html>
