--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -13,7 +13,7 @@
 <h1>TENTATIVE SCHEDULE</h1>
 </center>
 <center>
-<h1>CPSC:4/526, TR 9:15 - 10:30, XXX, SPRING 2025</h1>
+<h1>CPSC:4/526, TR 9:15 - 10:30, BCAS 134, SPRING 2025</h1>
 </center>
 <table style="width: 1889px; height: 482px;" border="1">
   <tbody>
