--- a/teaching/cs426/textFiles/sis.htm
+++ b/teaching/cs426/textFiles/sis.htm
@@ -21,16 +21,12 @@ font-family:Verdana
 STUDENT INFORMATION SHEET</font></b><b><font color="#868cde"
  face="Verdana" size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br>
 <ul>
-  <li><a href="sis.pdf"><b><font color="#868cde" face="Verdana" size="2">In-class
+  <li><a href="sis.pdf" target="_top"><b><font color="#868cde" face="Verdana" size="2">In-class
 Handout</font></b></a></li>
-  <li><a href="Faculty%20Senate%20Chronicle%20November%203%202022.pdf"><b><font
- color="#868cde" face="Verdana" size="2">Diversity Statement</font></b></a></li>
-  <li><b><font color="#868cde" face="Verdana" size="2"><a
- href="https://www.uakron.edu/access/faculty-and-staff/syllabus.dot">Accessibility
-Office Statement</a><br>
-    </font></b></li>
+  <li><a href="dao.pdf" target="_top"><b><font color="#868cde" face="Verdana" size="2">Diversity
+and Accessibility Statements</font></b></a></li>
   <li><a
- href="https://www.uakron.edu/oaa/faculty-affairs/what-students-need-to-know"><b><font
+ href="https://www.uakron.edu/oaa/faculty-affairs/what-students-need-to-know" target="_top"><b><font
  color="#868cde" face="Verdana" size="2">OAA Student Info</font></b></a></li>
 </ul>
 <b></b>
