--- a/teaching/cs426/textFiles/instructor.htm
+++ b/teaching/cs426/textFiles/instructor.htm
@@ -35,12 +35,7 @@ O'Neil</span><br>
  style="color: rgb(252, 191, 67);">In BCAS 221A: Tues 1045 - 1215,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Thurs 215 - 315.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In Polsky M183J: Mon 215 -
-315.</span></font></b><b><font color="#868cde" face="Verdana" size="2"><span
- style="color: rgb(252, 191, 67);"></span></font></b><br
- style="color: rgb(252, 191, 67);">
-<b><font color="#868cde" face="Verdana" size="2"><span
- style="color: rgb(252, 191, 67);"></span><span
+<span
  style="color: rgb(252, 191, 67);">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; Also available by
 appointment.</span></font></b><br>
