--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -38,11 +38,18 @@
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 13 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 14</td>
+ valign="top">Jan 14<br>
+      <div style="text-align: center;">Intro, Lecture O1<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 15 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 16</td>
+ valign="top">Jan 16<br style="font-style: italic;">
+      <div style="text-align: center;">Lectures
+O1, O2<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 17 </td>
     </tr>
@@ -53,8 +60,14 @@
 Sunday: Last add day<br>
       </center>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 21</td>
+      <td style="background-color: rgb(255, 102, 102);"
+ bgcolor="#c0c0c0" valign="top">Jan 21<br>
+      <div
+ style="text-align: center; background-color: rgb(255, 102, 102);"><span
+ style="font-style: italic;">Remote: Lectures
+O2 (from slide 13), O3</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 22 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
@@ -286,3 +299,4 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
+
