--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -63,15 +63,23 @@ Sunday: Last add day<br>
       <td style="background-color: rgb(255, 102, 102);"
  bgcolor="#c0c0c0" valign="top">Jan 21<br>
       <div
- style="text-align: center; background-color: rgb(255, 102, 102);"><span
- style="font-style: italic;">Remote: Lectures
-O2 (from slide 13), O3</span><br>
+ style="text-align: center; background-color: rgb(255, 102, 102);">Remote:
+Lectures
+O2, O3, O4<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
-22 </td>
+22<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Remote
+instruction</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 23</td>
+ valign="top">Jan 23<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+O4 (from slide 12)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 24 </td>
     </tr>
@@ -299,4 +307,3 @@ document.write("<br>Only " + diffDays + " days left until end of spring term (5/
 </script></span>
 </body>
 </html>
-
