--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -76,9 +76,8 @@ instruction</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 23<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-O4 (from slide 12)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures
+O4, O5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 24 </td>
@@ -91,11 +90,16 @@ Last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 28</td>
+ valign="top">Jan 28<br>
+      <div style="text-align: center;"> Lecture O5 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 29 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 30</td>
+ valign="top">Jan 30<br>
+      <div style="text-align: center;"> Lecture P1<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan
 31 </td>
     </tr>
@@ -103,7 +107,11 @@ Last drop day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 3 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 4</td>
+ valign="top">Feb 4<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P1 (from slide 45), P2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 5 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
@@ -162,7 +170,11 @@ Last withdraw day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 4</td>
+ valign="top">Mar 4<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 5 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
@@ -226,7 +238,11 @@ Break</center>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 2 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 3</td>
+ valign="top">Apr 3<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 4 </td>
     </tr>
@@ -274,7 +290,11 @@ Break</center>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 30 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">May 1</td>
+ valign="top">May 1<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 3</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May
 2 </td>
     </tr>
