--- a/teaching/cs426/textFiles/projects.htm
+++ b/teaching/cs426/textFiles/projects.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
   <meta http-equiv="Content-Language" content="en-us">
@@ -22,14 +22,17 @@ HOMEWORK
 AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 1 - A Simple Linux Shell<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../labs/lab%201%20linux%20shell.pdf" target="_top">Description</a>
+, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
+&nbsp;&nbsp; Due March 4.<br>
 <br>
 &nbsp;&nbsp; Lab 2 -<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp; Due April 3.<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
-&nbsp;&nbsp; Due TBD.<br>
+&nbsp;&nbsp; Due May 1.<br>
 </font></b><b><br>
 </b>
 </body>
