--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -108,14 +108,14 @@ Last drop day</span><br>
 3 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P1 (from slide 45), P2</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture P1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 5 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 6</td>
+ valign="top">Feb 6<br>
+      <div style="text-align: center;">Lectures P1, P2 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 7 </td>
     </tr>
@@ -123,27 +123,36 @@ P1 (from slide 45), P2</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 10 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 11</td>
+ valign="top">Feb 11<br>
+      <div style="text-align: center;">Lectures P2, P3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 12 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 13</td>
+ valign="top">Feb 13<br>
+      <div style="text-align: center;"> Lecture P3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 14 </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 17 </td>
-      <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
+      <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 18<br>
-      <div style="text-align: center;"><span style="font-style: italic;">President's
-Day Observed</span><br>
+      <div style="text-align: center; background-color: rgb(0, 0, 0);"><span
+ style="font-style: italic;">President's
+Day Observed, no class</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 19 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 20</td>
+ valign="top">Feb 20<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P3 (from slide 57), P4</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 21 </td>
     </tr>
@@ -156,7 +165,8 @@ Day Observed</span><br>
 26 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 27<br>
-      <div style="text-align: center;">Midterm Exam<br>
+      <div style="text-align: center;">Midterm Exam (Unit O; Lecs. P1,
+P2, P3)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
@@ -304,6 +314,7 @@ Lab 3</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
 6<br>
       <div style="text-align: center;">Final Exam, 12:15<br>
+(Lecs. P4, P5; Units D, F, M)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);">May 7
