--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -149,9 +149,7 @@ Day Observed, no class</span><br>
 19 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 20<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P3 (from slide 57), P4</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 21 </td>
@@ -160,7 +158,11 @@ P3 (from slide 57), P4</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 24 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 25</td>
+ valign="top">Feb 25<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P4 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 26 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
