--- a/teaching/cs426/textFiles/projects.htm
+++ b/teaching/cs426/textFiles/projects.htm
@@ -29,6 +29,8 @@ AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 2 -<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../labs/lab%202%20pthreads%20and%20sems.pdf" target="_top">Description</a>.<br>
 &nbsp;&nbsp; Due April 3.<br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
