--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -159,9 +159,7 @@ Day Observed, no class</span><br>
 24 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 25<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P4 (from start)</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture P4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 26 </td>
@@ -183,14 +181,19 @@ Last withdraw day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 1</span><br>
+      <div style="text-align: center;"> Lecture P4 </div>
+      <div style="text-align: center;">Due:
+Lab 1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 5 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 6</td>
+ valign="top">Mar 6<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P4 (Review), P5</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 7<br>
       </td>
     </tr>
@@ -250,9 +253,9 @@ Break</center>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 2 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 3<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 2</span><br>
+ valign="top">Apr 3<br style="font-style: italic;">
+      <div style="text-align: center;">Due:
+Lab 2<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
