--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -190,9 +190,7 @@ Lab 1<br>
 5 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 6<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P4 (Review), P5</span><br>
-      </div>
+      <div style="text-align: center;">Lectures P4, P5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar 7<br>
       </td>
@@ -201,11 +199,18 @@ P4 (Review), P5</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 10 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 11</td>
+ valign="top">Mar 11<br>
+      <div style="text-align: center;"> Lecture P5<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 12 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 13</td>
+ valign="top">Mar 13<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P5 (from slide 59), D1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 14 </td>
     </tr>
