--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -207,9 +207,7 @@ Lab 1<br>
 12 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 13<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P5 (from slide 59), D1</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture P5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 14 </td>
@@ -218,11 +216,16 @@ P5 (from slide 59), D1</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 17 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 18</td>
+ valign="top">Mar 18<br>
+      <div style="text-align: center;"> Lecture D1<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 19 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Mar 20</td>
+ valign="top">Mar 20<br>
+      <div style="text-align: center;"> Lecture D1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 21 </td>
     </tr>
@@ -254,7 +257,11 @@ Break</center>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 31 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 1</td>
+ valign="top">Apr 1<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+D2 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 2 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
