--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -258,14 +258,15 @@ Break</center>
 31 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 1<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-D2 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures D2, F1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 2 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 3<br style="font-style: italic;">
+ valign="top">Apr 3<br>
+      <div style="text-align: center;">Lectures F1, F2<br
+ style="font-style: italic;">
+      </div>
       <div style="text-align: center;">Due:
 Lab 2<br>
       </div>
@@ -277,11 +278,18 @@ Lab 2<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 7 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 8</td>
+ valign="top">Apr 8<br>
+      <div style="text-align: center;">Lectures F2, M1<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 9 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 10</td>
+ valign="top">Apr 10<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+M1 (from slide 9)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 11 </td>
     </tr>
@@ -318,8 +326,8 @@ Lab 2<br>
 30 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">May 1<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 3</span><br>
+      <div style="text-align: center;">Due:
+Lab 3<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">May
