--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -286,9 +286,7 @@ Lab 2<br>
 9 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 10<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-M1 (from slide 9)</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture M1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 11 </td>
@@ -297,11 +295,17 @@ M1 (from slide 9)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 14 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 15</td>
+ valign="top">Apr 15<br>
+      <div style="text-align: center;"> Lecture M2<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 16 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 17</td>
+ valign="top">Apr 17<br>
+      <div style="text-align: center;"> Lecture M2<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 18 </td>
     </tr>
@@ -309,7 +313,11 @@ M1 (from slide 9)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 21 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 22</td>
+ valign="top">Apr 22<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+X1 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 23 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
