--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -314,14 +314,16 @@ Lab 2<br>
 21 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Apr 22<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-X1 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture
+X1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 23 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 24</td>
+ valign="top">Apr 24<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+X1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 25 </td>
     </tr>
@@ -329,11 +331,16 @@ X1 (from start)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 28 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Apr 29</td>
+ valign="top">Apr 29<br>
+      <div style="text-align: center;">Lectures
+X1, X3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Apr
 30 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">May 1<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+X3 (from slide 42), X3</span> </div>
       <div style="text-align: center;">Due:
 Lab 3<br>
       </div>
