--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -354,7 +354,7 @@ Lab 3<br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
 6<br>
       <div style="text-align: center;">Final Exam, 12:15<br>
-(Lecs. P4, P5; Units D, F, M)<br>
+(Lecs. P4, P5; Units D, F, M, X)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);">May 7
