--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <meta content="text/html; charset=ISO-8859-1"
- http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
   <title>Prof. Tim O'Neil's Teaching Home Page</title>
 </head>
 <body>
@@ -11,7 +10,8 @@
   <tbody>
     <tr>
       <td style="vertical-align: top;"><img alt="Prof. Tim O'Neil"
- src="uaSp15.bmp" style="width: 158px; height: 138px;"><br>
+ src="teaching%20index_files/uaSp15.bmp"
+ style="width: 158px; height: 138px;"><br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -27,8 +27,14 @@
 <h2>Teaching Schedule<br>
 </h2>
 <ul>
-  <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Fall '24 and Spring '25)</a></li>
-  <li>CPSC 589 - Topics in CPSC: Computing Concepts for Educators (Summer 5W1 '24)</li>
+  <li>CPSC 589 - Topics in CPSC: Computing Concepts for Educators (Fall
+2025)</li>
+  <li>CPSC 677 - Parallel Processing (Fall 2025)<br>
+  </li>
+  <li>CPSC 4/526 - Operating Systems (Spring 2026)<br>
+  </li>
+</ul>
+<ul>
 </ul>
 <h2>Previous Courses</h2>
 <ul>
@@ -51,8 +57,7 @@ Science<br>
   </li>
   <li>3460:635 - Advanced Algorithms</li>
   <li>3460:641 - Optimizations for Parallel
-Compilers<br></li>
-  <li>CPSC 677 - Parallel Processing<br></li>
+Compilers</li>
 </ul>
 <h2>Obsolete Courses</h2>
 <ul>
@@ -62,7 +67,7 @@ Compilers<br></li>
   <li>3460:665 - Advanced Computer Architecture</li>
 </ul>
 <span style="font-style: italic;">
-<script language="JavaScript"> document.write("<br>Last Updated " + document.lastModified);</script>.
+<script language="JavaScript"> document.write("<br>Last Updated " + document.lastModified);</script><br>
 </span>
 </body>
 </html>
