--- a/teaching/index.html
+++ b/teaching/index.html
@@ -10,7 +10,7 @@
   <tbody>
     <tr>
       <td style="vertical-align: top;"><img alt="Prof. Tim O'Neil"
- src="teaching%20index_files/uaSp15.bmp"
+ src="uaSp15.bmp"
  style="width: 158px; height: 138px;"><br>
       </td>
       <td style="vertical-align: top;"><br>
