--- a/teaching/index.html
+++ b/teaching/index.html
@@ -27,9 +27,11 @@
 <h2>Teaching Schedule<br>
 </h2>
 <ul>
-  <li>CPSC 589 - Topics in CPSC: Computing Concepts for Educators (Fall
-2025)</li>
-  <li>CPSC 677 - Parallel Processing (Fall 2025)<br>
+  <li><a href="https://timoneilu.github.io/teaching/cs505/">CPSC 589 -
+Topics in CPSC: Computing Concepts for Educators (Fall
+2025)</a></li>
+  <li><a href="https://timoneilu.github.io/teaching/cs677/">CPSC 677 -
+Parallel Processing (Fall 2025)</a><br>
   </li>
   <li>CPSC 4/526 - Operating Systems (Spring 2026)<br>
   </li>
