--- a/teaching/cs505/textFiles/sis.htm
+++ b/teaching/cs505/textFiles/sis.htm
@@ -17,7 +17,7 @@ font-family:Verdana
 </head>
 <body alink="#af7703" bgcolor="#010516" link="#af7703" text="#ffffff"
  vlink="#fcbf43">
-<b><font color="#868cde" face="Verdana" size="2">CPSC 4/526<br>
+<b><font color="#868cde" face="Verdana" size="2">CPSC 589<br>
 STUDENT INFORMATION SHEET</font></b><b><font color="#868cde"
  face="Verdana" size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br>
 <ul>
@@ -32,3 +32,4 @@ and Accessibility Statements</font></b></a></li>
 <b></b>
 </body>
 </html>
+
