--- a/teaching/cs677/sis.htm
+++ b/teaching/cs677/sis.htm
@@ -17,11 +17,11 @@ font-family:Verdana
 </head>
 <body alink="#af7703" bgcolor="#010516" link="#af7703" text="#ffffff"
  vlink="#fcbf43">
-<b><font color="#868cde" face="Verdana" size="2">CPSC 4/526<br>
+<b><font color="#868cde" face="Verdana" size="2">CPSC 677<br>
 STUDENT INFORMATION SHEET</font></b><b><font color="#868cde"
  face="Verdana" size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br>
 <ul>
-  <li><a href="sis.pdf"><b><font color="#868cde" face="Verdana" size="2">In-class
+  <li><a href="sis677.pdf"><b><font color="#868cde" face="Verdana" size="2">In-class
 Handout</font></b></a></li>
   <li><a href="dao.pdf"><b><font color="#868cde" face="Verdana" size="2">Diversity
 and Accessibility Statements</font></b></a></li>
@@ -32,3 +32,4 @@ and Accessibility Statements</font></b></a></li>
 <b></b>
 </body>
 </html>
+
