--- a/teaching/cs677/index.html
+++ b/teaching/cs677/index.html
@@ -98,7 +98,7 @@ FALL 2025<br>
  face="Verdana" size="2">INSTRUCTOR</font></b></div>
 <div id="layer19"
  style="left: 4px; top: 120px; width: 68px; height: 43px; position: absolute; z-index: 9;"><a
- href="sis.htm"><img alt="gold off"
+ href="sis.htm" target="I1"><img alt="gold off"
  onmouseover="this.src='homePageGraphics/all_on.png'"
  onmouseout="this.src='homePageGraphics/gold_off.png'"
  src="homePageGraphics/gold_off.png"
