--- a/teaching/cs677/sis.htm
+++ b/teaching/cs677/sis.htm
@@ -21,15 +21,16 @@ font-family:Verdana
 STUDENT INFORMATION SHEET</font></b><b><font color="#868cde"
  face="Verdana" size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br>
 <ul>
-  <li><a href="sis677.pdf"><b><font color="#868cde" face="Verdana" size="2">In-class
+  <li><a href="sis677.pdf" target="_top"><b><font color="#868cde" face="Verdana" size="2">In-class
 Handout</font></b></a></li>
-  <li><a href="dao.pdf"><b><font color="#868cde" face="Verdana" size="2">Diversity
+  <li><a href="dao.pdf" target="_top"><b><font color="#868cde" face="Verdana" size="2">Diversity
 and Accessibility Statements</font></b></a></li>
   <li><a
- href="https://www.uakron.edu/oaa/faculty-affairs/what-students-need-to-know"><b><font
+ href="https://www.uakron.edu/oaa/faculty-affairs/what-students-need-to-know" target="_top"><b><font
  color="#868cde" face="Verdana" size="2">OAA Student Info</font></b></a></li>
 </ul>
 <b></b>
 </body>
 </html>
+
 
