--- a/teaching/cs505/textFiles/instructor.htm
+++ b/teaching/cs505/textFiles/instructor.htm
@@ -32,7 +32,7 @@ O'Neil</span><br>
  style="font-style: italic; color: rgb(252, 191, 67);">edu</span><br>
 &nbsp;&nbsp;&nbsp; Office Hours:<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span
- style="color: rgb(252, 191, 67);">Monday - Friday 11:30 - 12:30 PM.</span></font></b><b><font
+ style="color: rgb(252, 191, 67);">TBD.</span></font></b><b><font
  color="#868cde" face="Verdana" size="2"><span
  style="color: rgb(252, 191, 67);"></span></font></b><br
  style="color: rgb(252, 191, 67);">
@@ -43,3 +43,4 @@ O'Neil</span><br>
 appointment.</span></font></b><br>
 </body>
 </html>
+
