--- a/teaching/cs677/homePageGraphics/instructor.htm
+++ b/teaching/cs677/homePageGraphics/instructor.htm
@@ -32,11 +32,7 @@ O'Neil</span><br>
  style="font-style: italic; color: rgb(252, 191, 67);">edu</span><br>
 &nbsp;&nbsp;&nbsp; Office Hours:<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span
- style="color: rgb(252, 191, 67);">Tues/Weds 1045 - 1145 in BCAS<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 221A; Mon
-1100 - 1200, Thurs<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 230 - 330
-in Polsky M183J.</span></font></b><b><font color="#868cde"
+ style="color: rgb(252, 191, 67);">TBD.</span></font></b><b><font color="#868cde"
  face="Verdana" size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br
  style="color: rgb(252, 191, 67);">
 <b><font color="#868cde" face="Verdana" size="2"><span
@@ -46,3 +42,4 @@ in Polsky M183J.</span></font></b><b><font color="#868cde"
 appointment.</span></font></b><br>
 </body>
 </html>
+
